Fixed issue of booking form bottom border onload flicker

--- a/app/assets/stylesheets/components/home_show.scss
+++ b/app/assets/stylesheets/components/home_show.scss
@@ -77,8 +77,9 @@
 }
 
 .booking-form-cntr {
+  height: -webkit-fill-available;
   position: sticky;
-  top: 105px;
+  top: 110px;
 }
 
 .booking-form,
